# odin-red

./: README.md
disco/drivers/angle_sensors/: angle_sensors.c  angle_sensors.h
disco/drivers/distance_sensors/: distance_sensors.c  distance_sensors.h
disco/drivers/serial_comms/: serial_comms.c  serial_comms.h
disco/main/: CMakeLists.txt  prj.conf
disco/main/boards/: disco_l475_iot1.overlay
disco/main/src/: main.c
disco_testing/disco_angle_testing/: CMakeLists.txt  prj.conf
disco_testing/disco_angle_testing/src/: main.c
disco_testing/disco_tof_testing/: README.md  prj.conf
disco_testing/disco_tof_testing/boards/: disco_l475_iot1.overlay
disco_testing/disco_tof_testing/src/: main.c
esp32c3/: CMakeLists.txt  dtc_uart.overlay  prj.conf
esp32c3/src/: ahu_rgb.c  ahu_rgb.h  main.c  motordriver.c  motordriver.h  pos_mobile_bt.c  pos_mobile_bt.h  rovermotor.c  rovermotor.h  roveruart.c  roveruart.h
motor_test/: CMakeLists.txt  dtc_uart.overlay  prj.conf
motor_test/src/: main.c  motordriver.c  motordriver.h  rovermotor.c  rovermotor.h  roveruart.c  roveruart.h
pc_software/: pc_hid_script.py
pos_base_node/: CMakeLists.txt  Kconfig  app.overlay  nrflash.sh  prj.conf
pos_base_node/src/: main.c  pos_base_bt.c  pos_base_bt.h  pos_base_hci.c  pos_base_hci.h  uart_reinit.c
test_scripts/: test_pos_trig.py  test_py_hid.py
test_scripts/disco_test_scripts/disco_angle_testing/: README.md
updated_zephyr_drivers/: README.md
updated_zephyr_drivers/lis3mdl/: README.md
updated_zephyr_drivers/vl53l1x/: README.md  vl53l1.c
wiki/: contents.md  homepage.md  progress.md  project_deployment.md  project_diagrams.md  project_overview.md
